--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,126 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
 
-  </body>
+<body>
+  <header class="page-header">
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item--active">
+          <a>Главная</a>
+        </li>
+        <li class="site-list__item">
+          <a href="photo.html">Фото и видео</a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html">Форма Отзыва</a>
+        </li>
+        <li class="site-list__item">
+          <a href="#">HTML Academy</a>
+        </li>
+      </ul>
+
+    </nav>
+    <a class="page-header__logo">
+      <img class="page-header__logo-image" src="#" width="102" height="83" alt="Седона">
+    </a>
+
+    <img class="page-header__background--background-image" src="#" width="320" height="389" alt="Вид города Седона">
+    <img class="page-header__background--background-text" src="#" width="281" height="214" alt="Слоган города Седона">
+  </header>
+
+  <main class="page-main">
+    <h1 class="visually-hidden">СЕДОНА — городок в АРИЗОНЕ</h1>
+    <section class="advantages">
+      <header class="advantages__header">
+
+
+        <h2 class="visually-hidden">Статистика Седоны </h2>
+        <b class="advantages__title">СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!</b>
+        <p class="advantages__argument">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон! </p>
+
+      </header>
+      <ul class="advantages__list">
+        <li class="advantages__item">
+          <h3 class="advantages__title--white"> НАСТОЯЩИЙ ГОРОДОК</h3>
+          <span class="advantages__number--white">— №1 —</span>
+          <p class="advantages__argument--white">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+        </li>
+
+        <li class="advantages__item--housing">
+          <h3 class="advantages__title">Жилье</h3>
+          <p class="advantages__argument">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+        </li>
+
+        <li class="advantages__item--souvenirs">
+          <h3 class="advantages__title">СУВЕНИРЫ</h3>
+          <p class="advantages__argument"> Не только китайского, но и местного производства!</p>
+        </li>
+
+        <li class="advantages__item--food">
+          <h3 class="advantages__title">ЕДА</h3>
+          <p class="advantages__argument">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
+        </li>
+
+        <li class="advantages__item">
+          <h3 class="advantages__title--white">ТАМ ЕСТЬ Мост дьявола</h3>
+          <span class="advantages__number--white">— №2 —</span>
+          <p class="advantages__argument--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+        </li>
+
+        <li class="advantages__item">
+          <h3 class="advantages__title"> НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+          <span class="advantages__number">— №3 —</span>
+          <p class="advantages__argument">ВСЕ интересные места находятся очень близко</p>
+        </li>
+
+        <li class="advantages__item">
+          <h3 class="advantages__title">КРАСИВАЯ ДОРОГА</h3>
+          <span class="advantages__number">— №4 —</span>
+          <p class="advantages__argument">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
+        </li>
+
+        <li class="advantages__item">
+          <h3 class="advantages__title">МАЛО ТУРИСТОВ</h3>
+          <span class="advantages__number">— №5 —</span>
+          <p class="advantages__argument">Большинство едет в гранд каньон и толпится там</p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="interested">
+      <h3 class="interested__title">ЗАИНТЕРЕСОВАЛИСЬ?</h3>
+      <p class="interested__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <a class="interested__show button" href="#">НАЙТИ гостиницу</a>
+    </section>
+  </main>
+
+  <footer class="page-footer">
+    <img src="#" width="320" height="350" alt="Седона на карте">
+    <b class="tag">#visitSEDONA</b>
+    <div class="page-footer__social social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в В Твиттере</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Youtube</a>
+        </li>
+      </ul>
+    </div>
+
+    <b>Разработано</b>
+    <a href="https://htmlacademy.ru/intensive/adaptive">
+      <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
+  </footer>
+</body>
+
 </html>
