--- a/source/index.html
+++ b/source/index.html
@@ -3,15 +3,18 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Седона</title>
+  <title> Седона</title>
 </head>
 
 <body>
   <header class="page-header">
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="#" width="102" height="83" alt="Седона">
+      </a>
+      <button aria-label="Открыть меню" class="main-nav__toggle" type="button"></button>
       <ul class="main-nav__list site-list">
-        <li class="site-list__item--active">
+        <li class="site-list__item site-list__item--active">
           <a>Главная</a>
         </li>
         <li class="site-list__item">
@@ -21,30 +24,22 @@
           <a href="form.html">Форма Отзыва</a>
         </li>
         <li class="site-list__item">
-          <a href="#">HTML Academy</a>
+          <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         </li>
       </ul>
-
     </nav>
-    <a class="page-header__logo">
-      <img class="page-header__logo-image" src="#" width="102" height="83" alt="Седона">
-    </a>
-
-    <img class="page-header__background--background-image" src="#" width="320" height="389" alt="Вид города Седона">
-    <img class="page-header__background--background-text" src="#" width="281" height="214" alt="Слоган города Седона">
   </header>
 
   <main class="page-main">
-    <h1 class="visually-hidden">СЕДОНА — городок в АРИЗОНЕ</h1>
+    <section class="promo">
+      <img class="page-header__sedona-image" src="#" width="320" height="389" alt="Вид города Седона">
+      <img class="page-header__sedona-text" src="#" width="281" height="214" alt="Слоган города Седона">
+      <h1 class="visually-hidden">СЕДОНА — городок в Аризоне</h1>
+      <b class="promo__title">СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!</b>
+      <p class="promo__argument">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон! </p>
+    </section>
+
     <section class="advantages">
-      <header class="advantages__header">
-
-
-        <h2 class="visually-hidden">Статистика Седоны </h2>
-        <b class="advantages__title">СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!</b>
-        <p class="advantages__argument">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон! </p>
-
-      </header>
       <ul class="advantages__list">
         <li class="advantages__item">
           <h3 class="advantages__title--white"> НАСТОЯЩИЙ ГОРОДОК</h3>
@@ -93,17 +88,19 @@
       </ul>
     </section>
 
-    <section class="interested">
-      <h3 class="interested__title">ЗАИНТЕРЕСОВАЛИСЬ?</h3>
-      <p class="interested__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      <a class="interested__show button" href="#">НАЙТИ гостиницу</a>
+    <section class="search-hotel">
+      <h3 class="visually-hidden">Поиск гостиницы в Седоне</h3>
+      <b class="search-hotel__title">ЗАИНТЕРЕСОВАЛИСЬ?</b>
+      <p class="search-hotel__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <a class="search-hotel__show button" href="#">НАЙТИ гостиницу</a>
     </section>
   </main>
 
   <footer class="page-footer">
     <img src="#" width="320" height="350" alt="Седона на карте">
     <b class="tag">#visitSEDONA</b>
-    <div class="page-footer__social social">
+    <section class="page-footer__social social">
+      <h3 class="visually-hidden">Седона в соцсетях</h3>
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в В Твиттере</a>
@@ -115,11 +112,13 @@
           <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Youtube</a>
         </li>
       </ul>
-    </div>
+    </section>
 
-    <b>Разработано</b>
-    <a href="https://htmlacademy.ru/intensive/adaptive">
-      <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
+    <div class="made-by">
+      <b>Разработано</b>
+      <a href="https://htmlacademy.ru/intensive/adaptive">
+        <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
+    </div>
   </footer>
 </body>
 
