--- a/source/form.html
+++ b/source/form.html
@@ -3,15 +3,18 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Седона</title>
+  <title> Форма отзыва | Седона</title>
 </head>
 
 <body>
   <header class="page-header">
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="#" width="102" height="83" alt="Седона">
+      </a>
+      <button aria-label="Открыть меню" class="main-nav__toggle" type="button"></button>
       <ul class="main-nav__list site-list">
-        <li class="site-list__item--active">
+        <li class="site-list__item site-list__item--active">
           <a>Главная</a>
         </li>
         <li class="site-list__item">
@@ -21,38 +24,35 @@
           <a href="form.html">Форма Отзыва</a>
         </li>
         <li class="site-list__item">
-          <a href="#">HTML Academy</a>
+          <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         </li>
       </ul>
     </nav>
-    <a class="page-header__logo">
-      <img class="page-header__logo-image" src="#" width="102" height="83" alt="Седона">
-    </a>
-    <img class="page-header__background--background-image" src="#" width="321" height="389" alt="Вид города Седона">
-    <img class="page-header__background--background-text" src="#" width="281" height="214" alt="Слоган города Седона">
   </header>
 
   <main class="page-main">
-    <h1 class="visually-hidden">СЕДОНА — городок в АРИЗОНЕ. Форма отзыва.</h1>
-    <section class="form">
-      <header class="form__header">
-        <h2 class="visually-hidden">Форма отзыва о Седоне </h2>
-        <b class="advantages__title--form">Оставьте свой отзыв</b>
-        <p class="advantages__argument--form">
-          Помогите нашим отелям стать лучше!
-          оставьте отзыв о них, а также о посещенных вами достопримечательностях
-        </p>
+
+    <section class="intro">
+      <img class="page-header__sedona-image" src="#" width="321" height="389" alt="Вид города Седона">
+      <img class="page-header__sedona-text" src="#" width="281" height="214" alt="Слоган города Седона">
+      <h1 class="intro__title">Оставьте свой отзыв</h1>
+      <p class="intro__text">
+        Помогите нашим отелям стать лучше!
+        оставьте отзыв о них, а также о посещенных вами достопримечательностях
+      </p>
       </header>
 
-      <!-- Форма, верстать позже-->
+      <section class="form">
+        <!-- Форма, верстать позже-->
 
-    </section>
+      </section>
   </main>
 
   <footer class="page-footer">
     <img src="#" width="320" height="350" alt="Седона на карте">
     <b class="tag">#visitSEDONA</b>
-    <div class="page-footer__social social">
+    <section class="page-footer__social social">
+      <h3 class="visually-hidden">Седона в соцсетях</h3>
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в В Твиттере</a>
@@ -64,11 +64,13 @@
           <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Youtube</a>
         </li>
       </ul>
-    </div>
+    </section>
 
-    <b>Разработано</b>
-    <a href="https://htmlacademy.ru/intensive/adaptive">
-      <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
+    <div class="made-by">
+      <b>Разработано</b>
+      <a href="https://htmlacademy.ru/intensive/adaptive">
+        <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
+    </div>
   </footer>
 </body>
 
