--- a/source/form.html
+++ b/source/form.html
@@ -40,17 +40,18 @@
         Помогите нашим отелям стать лучше!
         оставьте отзыв о них, а также о посещенных вами достопримечательностях
       </p>
-      </header>
+    </section>
 
-      <section class="form">
-        <!-- Форма, верстать позже-->
+    <section class="form">
+      <h2 class="visually-hidden">Форма отзыв</h2>
+      <!-- Форма, верстать позже-->
 
-      </section>
+    </section>
   </main>
 
   <footer class="page-footer">
     <img src="#" width="320" height="350" alt="Седона на карте">
-    <b class="tag">#visitSEDONA</b>
+    <b class="tag">#visitsedona</b>
     <section class="page-footer__social social">
       <h3 class="visually-hidden">Седона в соцсетях</h3>
       <ul class="social__list">
