--- a/source/index.html
+++ b/source/index.html
@@ -34,71 +34,71 @@
     <section class="promo">
       <img class="page-header__sedona-image" src="#" width="320" height="389" alt="Вид города Седона">
       <img class="page-header__sedona-text" src="#" width="281" height="214" alt="Слоган города Седона">
-      <h1 class="visually-hidden">СЕДОНА — городок в Аризоне</h1>
-      <b class="promo__title">СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!</b>
+      <h1 class="visually-hidden">Седона — городок в Аризоне</h1>
+      <b class="promo__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</b>
       <p class="promo__argument">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон! </p>
     </section>
 
     <section class="advantages">
       <ul class="advantages__list">
         <li class="advantages__item">
-          <h3 class="advantages__title--white"> НАСТОЯЩИЙ ГОРОДОК</h3>
-          <span class="advantages__number--white">— №1 —</span>
-          <p class="advantages__argument--white">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+          <h2 class="advantages__title advantages__title--white">Настоящий городок</h2>
+          <span class="advantages__number advantages__number--white">— №1 —</span>
+          <p class="advantages__argument advantages__argument--white">Седона не аттракцион для туристов, там течет своя жизнь</p>
         </li>
 
-        <li class="advantages__item--housing">
+        <li class="advantages__item advantages__item--housing">
           <h3 class="advantages__title">Жилье</h3>
           <p class="advantages__argument">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </li>
 
-        <li class="advantages__item--souvenirs">
-          <h3 class="advantages__title">СУВЕНИРЫ</h3>
+        <li class="advantages__item advantages__item--souvenirs">
+          <h3 class="advantages__title">Сувениры</h3>
           <p class="advantages__argument"> Не только китайского, но и местного производства!</p>
         </li>
 
-        <li class="advantages__item--food">
-          <h3 class="advantages__title">ЕДА</h3>
+        <li class="advantages__item advantages__item--food">
+          <h3 class="advantages__title">Еда</h3>
           <p class="advantages__argument">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
         </li>
 
         <li class="advantages__item">
-          <h3 class="advantages__title--white">ТАМ ЕСТЬ Мост дьявола</h3>
-          <span class="advantages__number--white">— №2 —</span>
-          <p class="advantages__argument--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <h3 class="advantages__title advantages__title--white">Там есть Мост дьявола</h3>
+          <span class="advantages__number advantages__number--white">— №2 —</span>
+          <p class="advantages__argument advantages__argument--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         </li>
 
         <li class="advantages__item">
-          <h3 class="advantages__title"> НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+          <h3 class="advantages__title"> Небольшая площадь</h3>
           <span class="advantages__number">— №3 —</span>
-          <p class="advantages__argument">ВСЕ интересные места находятся очень близко</p>
+          <p class="advantages__argument">Все интересные места находятся очень близко</p>
         </li>
 
         <li class="advantages__item">
-          <h3 class="advantages__title">КРАСИВАЯ ДОРОГА</h3>
+          <h3 class="advantages__title">Красивая дорога</h3>
           <span class="advantages__number">— №4 —</span>
-          <p class="advantages__argument">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
+          <p class="advantages__argument">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
 
         <li class="advantages__item">
-          <h3 class="advantages__title">МАЛО ТУРИСТОВ</h3>
+          <h3 class="advantages__title">Мало туристов</h3>
           <span class="advantages__number">— №5 —</span>
-          <p class="advantages__argument">Большинство едет в гранд каньон и толпится там</p>
+          <p class="advantages__argument">Большинство едет в Гранд каньон и толпится там</p>
         </li>
       </ul>
     </section>
 
     <section class="search-hotel">
       <h3 class="visually-hidden">Поиск гостиницы в Седоне</h3>
-      <b class="search-hotel__title">ЗАИНТЕРЕСОВАЛИСЬ?</b>
+      <b class="search-hotel__title">Заинтересовались?</b>
       <p class="search-hotel__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      <a class="search-hotel__show button" href="#">НАЙТИ гостиницу</a>
+      <a class="search-hotel__show button" href="#">Найти гостиницу</a>
     </section>
   </main>
 
   <footer class="page-footer">
     <img src="#" width="320" height="350" alt="Седона на карте">
-    <b class="tag">#visitSEDONA</b>
+    <b class="tag">#visitsedona</b>
     <section class="page-footer__social social">
       <h3 class="visually-hidden">Седона в соцсетях</h3>
       <ul class="social__list">
