--- a/source/photo.html
+++ b/source/photo.html
@@ -34,8 +34,7 @@
     <section class="intro">
       <img class="page-header__sedona-image" src="#" width="321" height="389" alt="Вид города Седона">
       <img class="page-header__sedona-text" src="#" width="281" height="214" alt="Слоган города Седона">
-      <h1 class="visually-hidden">СЕДОНА — городок в Аризоне. Фото.</h1>
-      <b class="intro__title">Фото и видео</b>
+      <h1 class="intro__title">Фото и видео</h1>
       <p class="intro__text">
         Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
       </p>
@@ -49,9 +48,9 @@
           </a>
           <h3 class="photo__title">Неродные просторы</h3>
           <p class="photo__author">Автор фото: Борис</p>
-          <div class="likes">
-            <button class="likes__button"></button>
-            <b class="likes__title">1350</b>
+          <div class="photo__likes likes">
+            <button class="photo__likes likes__button"></button>
+            <b class="photo__likes likes__title">1350</b>
           </div>
         </li>
         <li class="catalog__item photo">
@@ -60,9 +59,9 @@
           </a>
           <h3 class="photo__title">Местная растительность</h3>
           <p class="photo__author">Автор фото: Сергей</p>
-          <div class="likes">
-            <button class="likes__button"></button>
-            <b class="likes__title">143</b>
+          <div class="photo__likes likes">
+            <button class="photo__likes likes__button"></button>
+            <b class="photo__likes likes__title">143</b>
           </div>
         </li>
         <li class="catalog__item photo">
@@ -72,9 +71,9 @@
           <h3 class="photo__title">Дорога на север
           </h3>
           <p class="photo__author">Автор фото: Петр</p>
-          <div class="likes">
-            <button class="likes__button"></button>
-            <b class="likes__title">96</b>
+          <div class="photo__likes likes">
+            <button class="photo__likes likes__button"></button>
+            <b class="photo__likes likes__title">96</b>
           </div>
         </li>
         <li class="catalog__item photo">
@@ -84,9 +83,9 @@
           <h3 class="photo__title">Мост дьявола
           </h3>
           <p class="photo__author">Автор фото: Антон</p>
-          <div class="likes">
-            <button class="likes__button"></button>
-            <b class="likes__title">254</b>
+          <div class="photo__likes likes">
+            <button class="photo__likes likes__button"></button>
+            <b class="photo__likes likes__title">254</b>
           </div>
         </li>
       </ul>
@@ -103,7 +102,7 @@
 
   <footer class="page-footer">
     <img src="#" width="320" height="350" alt="Седона на карте">
-    <b class="tag">#visitSEDONA</b>
+    <b class="tag">#visitsedona</b>
     <section class="page-footer__social social">
       <h3 class="visually-hidden">Седона в соцсетях</h3>
       <ul class="social__list">
