Вносит правки в разметку формы

--- a/source/form.html
+++ b/source/form.html
@@ -107,12 +107,12 @@
           <h3 class="form__title">Опишите свои эмоции:</h3>
           <textarea id="emotions" name="emotions" rows="5">Опишите подробно все свои восторги</textarea>
           <label for="emotions"></label>
+          <button class="send-review__show button">Отправить отзыв</button>
       </form>
     </section>
   </main>
 
   <footer class="page-footer">
-    <img src="#" width="320" height="350" alt="Седона на карте">
     <b class="tag">#visitsedona</b>
     <section class="page-footer__social social">
       <h3 class="visually-hidden">Седона в соцсетях</h3>
