Заканчивает разметку файла photo

--- a/source/photo.html
+++ b/source/photo.html
@@ -97,11 +97,11 @@
       <p class="video__argument">
         Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
       </p>
+      <img src="#" width="321" height="201" alt="Видеопрезентация Седоны">
     </section>
   </main>
 
   <footer class="page-footer">
-    <img src="#" width="320" height="350" alt="Седона на карте">
     <b class="tag">#visitsedona</b>
     <section class="page-footer__social social">
       <h3 class="visually-hidden">Седона в соцсетях</h3>
