Заканчивает разметку файла index

--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,7 @@
 
         <li class="advantages__item advantages__item--food">
           <h3 class="advantages__title">Еда</h3>
-          <p class="advantages__argument">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
+          <p class="advantages__argument">Всегда заказывайте Фирменный бургер, Вы НЕ разочаруетесь!</p>
         </li>
 
         <li class="advantages__item">
